[package]
name = "cira-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.4.0"
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = {version = "0.3.64", features = ["HtmlInputElement", "Element", "HtmlDocument", "Storage", "Location"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
yew-router = "0.17"
serde = "1.0.183"
